# tarc-gui

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/styles/: darkstyle.qss
src/core/: tarc_wrapper.cpp  tarc_wrapper.h
src/gui/: archivemodel.cpp  archivemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  serialportmanager.cpp  serialportmanager.h  settingsdialog.cpp  settingsdialog.h  tarc_gui.pro  workerthread.cpp  workerthread.h
src/gui/resources/styles/: darkstyle.qss
